fixed spacing issues of footer

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,12 @@ footer, .page-footer {
   padding: 0px!important;
 }
 
+.footer-content {
+  display: inline;
+  float: left;
+  padding-left: 43pt;
+}
+
 .hamburger {
   color: white;
 }
@@ -241,10 +247,6 @@ footer, .page-footer {
   .contact-icons {    margin: auto;
     display: block;
     width: 40%;}
-  .footer-content {
-    display: inline;
-    float: left;
-  }
 
 }
 
